--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,15 @@
 			<scope>test</scope>
 		</dependency>
 
+<!-- https://mvnrepository.com/artifact/org.monte/screen-recorder -->
+<dependency>
+    <groupId>org.monte</groupId>
+    <artifactId>screen-recorder</artifactId>
+    <version>0.7.7</version>
+    	<scope>test</scope>
+</dependency>
+
+
 		<dependency>
 			<groupId>org.jboss.arquillian.junit</groupId>
 			<artifactId>arquillian-junit-container</artifactId>
