--- a/pom.xml
+++ b/pom.xml
@@ -157,5 +157,14 @@
 			<version>${cxf-version}</version> <scope>test</scope> </dependency> -->
 
 	</dependencies>
+	
+	<repositories>
+	
+	<repository>
+	<id>jenkins</id>
+	<url>http://repo.jenkins-ci.org/releases/</url>
+	</repository>
+	
+	</repositories>
 
 </project>
