--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<!-- <parent> <groupId>fr.gouv.education.sirhen.programme</groupId> <artifactId>programme-sirhen-j2ee-ma-mapi</artifactId> 
@@ -57,13 +56,13 @@
 			<scope>test</scope>
 		</dependency>
 
-<!-- https://mvnrepository.com/artifact/org.monte/screen-recorder -->
-<dependency>
-    <groupId>org.monte</groupId>
-    <artifactId>screen-recorder</artifactId>
-    <version>0.7.7</version>
-    	<scope>test</scope>
-</dependency>
+		<!-- https://mvnrepository.com/artifact/org.monte/screen-recorder -->
+		<dependency>
+			<groupId>org.monte</groupId>
+			<artifactId>screen-recorder</artifactId>
+			<version>0.7.7</version>
+			<scope>test</scope>
+		</dependency>
 
 
 		<dependency>
@@ -86,6 +85,15 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.github.cukespace/cukespace-core -->
+		<dependency>
+			<groupId>com.github.cukespace</groupId>
+			<artifactId>cukespace-core</artifactId>
+			<version>1.6.7</version>
+			<scope>test</scope>
+		</dependency>
+
 
 		<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-deploy -->
 		<dependency>
@@ -157,14 +165,14 @@
 			<version>${cxf-version}</version> <scope>test</scope> </dependency> -->
 
 	</dependencies>
-	
+
 	<repositories>
-	
-	<repository>
-	<id>jenkins</id>
-	<url>http://repo.jenkins-ci.org/releases/</url>
-	</repository>
-	
+
+		<repository>
+			<id>jenkins</id>
+			<url>http://repo.jenkins-ci.org/releases/</url>
+		</repository>
+
 	</repositories>
 
 </project>
